--- a/intex.html
+++ b/intex.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
+
     <header class="cabecalho">
         <h1 class="title">Na Brasa</h1>
-        <h2 class="subtitulo">Início</h2>
         <nav>
-            <button onclick="">Sobre</button>
-            <button onclick="">Restaurantes</button>
-            <button onclick="">Contato</button>
+            <a href="intex.html"><button>Inicio</button></a>
         </nav>
     </header>
 
@@ -37,6 +35,7 @@
             </div>
         </section>
     </main>
+
     <main class="conteudo">
         <section class="cardapio">
             <h2>Bebidas</h2>
@@ -47,15 +46,29 @@
                 <li>Chá Gelado - R$ 7,00</li>
             </ul>
             <div class="imagens-cardapio">
-                <img src="agua.webp" alt="Bife à Parmegiana" />
-                <img src="refrigerantes.webp" alt="Frango Grelhado" />
-                <img src="sucos.webp" alt="Fraldinha na Brasa" />
-                <img src="cha.webp" alt="Costela Assada" />
+                <img src="agua.webp" alt="Água" />
+                <img src="refrigerantes.webp" alt="Refrigerante" />
+                <img src="sucos.webp" alt="Suco Natural" />
+                <img src="cha.webp" alt="Chá Gelado" />
             </div>
         </section>
     </main>
 
-    <button class="botao" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Voltar ao Topo</button>
+    <button class="botao voltar-topo" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Voltar ao Topo</button>
+    <a href="#modal" class="botao modal-btn">Informações</a>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <h2>Informações</h2>
+            <p>Bem-vindo ao Na Brasa! Oferecemos os melhores pratos grelhados da região, preparados com ingredientes
+                frescos e técnicas tradicionais.</p>
+            <h2>Horário de Funcionamento</h2>
+            <p>Segunda a Domingo: 11h às 23h</p>
+            <h2>Contato:</h2>
+            <p>Telefone: (11) 9999-9999</p>
+            <p>Email: contato@nabrasa.com.br</p>
+            <a href="#" class="botao">Fechar</a>
+        </div>
+    </div>
 
 </body>
 
